--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,12 @@
 
 .intro{
 
-    font-size: 6rem; 
-    font-family: 'Sacramento', cursive; 
+    font-size: 6rem;
+    font-family: 'Sacramento', cursive;
     color: rgb(180, 180, 180);
     padding:100px 50px 0 50px;
-    
-    
+
+
 }
 
 
@@ -17,17 +17,17 @@ body{
 }
 
 .bio{
-   
+
     font-size: 1.5rem;
-    
+
 
 }
 
 
 
-/*Images*/ 
+/*Images*/
 .profile-pic{
-    
+
     width: 75%;
 }
 
@@ -41,7 +41,7 @@ body{
     background-color: rgb(80, 80, 80);
     color: rgb(0, 0, 0);
 }
-  
+
 .row{
     margin-top:25px;
 }
@@ -59,12 +59,12 @@ body{
 .navbar {
     padding: 0 0 ;
   }
-  
+
 .logo{
     padding:40px;
-    
+
 }
-  
+
 .nav-item {
     padding: 0 40px;
 }
@@ -77,31 +77,31 @@ body{
 #Interests
 {
     position: relative;
-    text-align: center; 
-} 
+    text-align: center;
+}
 
 #Contact{
     position: relative;
     text-align: center;
 }
-  
+
   .skill {
     font-size: 1.5rem;
   }
-  
+
   .skill-box {
     padding: 4.5%;
   }
-  
+
   .icon {
     color: #080808;
     margin-bottom: 1rem;
   }
-  
+
   .icon:hover {
     color: #5e5e5e;
   }
-  
+
   .heading{
     text-decoration: underline;
     padding-top: 5rem;
@@ -135,18 +135,21 @@ body{
     padding: 4.5%;
  }
 
- 
 
- 
+.progressbar{
+  background-color: black;
+  background-image: linear-gradient(90deg, black, grey);
+}
 
-   
+
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 700px) {
-    
+
     .logo{
         padding: 20px;
     }
-    
+
     .intro{
         font-size: 4rem;
         padding-top: 0px;
@@ -161,13 +164,13 @@ body{
         padding-top: 40px;
     }
 
-  
+
 
     .profile-pic{
         border-radius: 50%;
-                
+
     }
-    
+
     .profile{
         text-align: center;
     }
@@ -181,9 +184,9 @@ body{
     }
     .brief-intro{
         padding: 1rem 1rem;
-    
+
     }
-    
+
     .contact-box{
         padding: 2rem 4rem;
 
@@ -195,13 +198,13 @@ body{
         padding: 1rem 1rem;
         font-size: 1rem;
     }
-   
+
 
   }
 
   /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 700px) and (max-device-width: 1024px) {
-    
+
 
     .title{
         text-align: center;
@@ -210,9 +213,9 @@ body{
 
     .profile-pic{
         border-radius: 50%;
-                
+
     }
-    
+
     .profile{
         text-align: center;
     }
@@ -233,11 +236,11 @@ body{
     }
     .brief-intro{
         padding: 2rem 5rem;
-    
+
     }
     .clink{
         padding: 1rem 1rem;
         font-size: 1.3rem;
     }
-   
+
   }
